<resources>
    <string name="app_name">PYC (COVID-19)</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="myth_realities"><![CDATA[Myth & Realities]]></string>
    <string name="unicef_descrip">A novel coronavirus (CoV) is a new strain of coronavirus.\n                 \n             The disease caused by the novel coronavirus first identified in Wuhan, China, has been named coronavirus disease 2019 (COVID-19) – ‘CO’ stands for corona, ‘VI’ for virus, and ‘D’ for disease. Formerly, this disease was referred to as ‘2019 novel coronavirus’ or ‘2019-nCoV.’</string>
    <string name="imf_descrip">With three-quarters of the countries reporting at least one confirmed case of COVID-19 and some facing a major outbreak, the coronavirus pandemic has become the largest near-term challenge to the region. Like much of the rest of the world, people in these countries were taken utterly by surprise with this development, and I would like to express my solidarity with them as they cope with this unprecedented health crisis.</string>
    <string name="who_descrip">Coronavirus disease (COVID-19) is an infectious disease caused by a newly discovered coronavirus.  Most people infected with the COVID-19 virus will experience mild to moderate respiratory illness and recover without requiring special treatment.  Older people, and those with underlying medical problems like cardiovascular disease, diabetes, chronic respiratory disease, and cancer are more likely to develop serious illness.</string>
    <string name="c_a_n_c_e_l">CANCEL</string>
    <string name="done">DONE</string>
    <string name="timezone">Country</string>
    <string name="gender">Gender</string>
    <string name="female">Female</string>
    <string name="male">Male</string>
    <string name="undefined_gen">Other</string>
    <string name="Safe">Safeguarded</string>
    <string name="infected">Infected</string>
    <string name="clerified">Clerified</string>
    <string name="svereill">Intense Infection</string>
    <string name="survior">Survivor</string>
    <string name="close">Close</string>
    <string name="youcannotgonext">You cannot</string>
    <string name="permission_str">In order to upload/capture image from your device, you need to allow app to access device camera and gallery. You can change these permissions in the System Settings  of your device.</string>

    <string name="a_l_l_o_w">ALLOW</string>
    <string name="camera">CAMERA</string>
    <string name="gallery">GALLERY</string>
    <string name="imageselector_str">Some string here</string>
    <string name="select_language">SELECT LANGUAGE</string>
    <string name="english">English</string>
    <string name="urdu">Urdu</string>
    <string name="change">CHANGE</string>
    <string name="help_feedback"><![CDATA[Help & Feedback]]></string>
    <string name="send">SEND</string>
    <string name="reported">Reported illnesses have ranged from mild symptoms to severe illness and death for confirmed coronavirus disease 2019 (COVID-19) cases. These symptoms may appear 2-14 days after exposure (based on the incubation period of MERS-CoV viruses). \n Some common symptoms that have been specifically linked to COVID-19 include:</string>
    <string name="stages_descrip">The new virus belongs to a family of viruses that can cause respiratory illnesses in humans ranging from the common cold to more severe diseases such as the severe acute respiratory syndrome (SARS) and the Middle East respiratory syndrome (MERS). READ MORE How dangerous is the new coronavirus? Thought to have been transmitted to humans from an as-yet-unidentified animal source, the new virus spreads primarily through respiratory droplets, such as those generated when an infected person coughs or sneezes. \n \n Few data are available about microscopic lesions and the pathophysiology of COVID-19. The main pathological findings at autopsy are:</string>
    <string name="myths_descrip">As the coronavirus continues to make the news, a host of untruths has surrounded the topic. In this special feature, we address some of these myths and conspiracies.With every global crisis comes an onslaught of conjecture and conspiracy theories, and coronavirus is no different. Here are some common myths and misconceptions, and the reasons that they do not stack up scientifically.</string>
    <string name="real_descrip">here\'s a lot of information circulating about COVID-19, the disease caused by the new coronavirus, so it’s important to know what’s true and what’s not. There are some realities about COVID-19:</string>
</resources>
