<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardBackgroundColor="@color/background"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        app:cardCornerRadius="2dp"
        app:cardElevation="5dp"
        android:elevation="5dp"
        >

        <LinearLayout
            android:layout_width="386dp"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingHorizontal="20dp"
            android:paddingVertical="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:fontFamily="@font/iowan_old_style_roman"
                android:text="@string/select_language"
                android:textColor="@color/titletext_black"
                android:textSize="16sp"
                android:textStyle="bold" />

            <RadioGroup
                android:id="@+id/lanGroup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <RadioButton
                    android:id="@+id/setEnglish"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:buttonTint="@color/btn_purple"
                    android:fontFamily="@font/helvetica_neue_medium"
                    android:layoutDirection="rtl"
                    android:text="@string/english"
                    android:textAlignment="textStart"
                    android:textColor="@color/descriptext_zinc"
                    android:textSize="15sp" />

                <RadioButton
                    android:id="@+id/setUrdu"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:buttonTint="@color/btn_purple"
                    android:fontFamily="@font/helvetica_neue_medium"
                    android:layoutDirection="rtl"
                    android:text="@string/urdu"
                    android:textAlignment="textStart"
                    android:textColor="@color/descriptext_zinc"
                    android:textSize="15sp" />
            </RadioGroup>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                >

                <androidx.cardview.widget.CardView
                    android:id="@+id/dontCahnge"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_centerInParent="true"
                    app:cardBackgroundColor="@color/btn_zinc"
                    app:cardCornerRadius="2dp"
                    android:elevation="7dp"
                    app:cardElevation="4dp"
                    app:cardUseCompatPadding="true"
                    >

                    <TextView
                        android:id="@+id/btnleft"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:paddingEnd="20dp"
                        android:paddingStart="20dp"
                        android:paddingVertical="7dp"
                        android:text="@string/c_a_n_c_e_l"
                        android:textSize="16sp"
                        android:fontFamily="@font/helvetica_neue_light"
                        android:textColor="@color/titletext_white" />
                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:id="@+id/doChange"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_centerInParent="true"
                    app:cardBackgroundColor="@color/btn_purple"
                    app:cardCornerRadius="2dp"
                    android:elevation="7dp"
                    app:cardElevation="4dp"
                    app:cardUseCompatPadding="true"
                    >

                    <TextView
                        android:id="@+id/btnright"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:paddingEnd="20dp"
                        android:paddingStart="20dp"
                        android:paddingVertical="7dp"
                        android:text="@string/change"
                        android:textSize="16sp"
                        android:fontFamily="@font/helvetica_neue_light"
                        android:textColor="@color/titletext_white" />
                </androidx.cardview.widget.CardView>
            </RelativeLayout>

        </LinearLayout>

    </androidx.cardview.widget.CardView>

</RelativeLayout>