<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <com.oktwohundred.corona.preventcorona.ExpenssionLayout.ExpansionHeader
        android:id="@+id/genderHeaderP"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:expansion_headerIndicator="@id/indecator_genderP"
        app:expansion_layout="@id/gender_listP"
        app:expansion_toggleOnClick="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:gravity="center"
            android:weightSum="6">

            <ImageView
                android:id="@+id/gendericon"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:scaleType="fitStart"
                android:src="@drawable/profile_icon"/>

            <EditText
                android:id="@+id/genderedit"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="4.7"
                android:background="@null"
                android:textColorHint="@color/grey"
                android:hint="Gender"
                android:enabled="false"
                android:imeOptions="actionNext"
                android:gravity="center_vertical"
                android:inputType="text"
                android:singleLine="true"
                android:textColor="@color/descriptext_zinc"
                android:fontFamily="@font/arial"
                android:textSize="16sp" />

            <ImageView
                android:id="@+id/indecator_genderP"
                android:layout_width="0dp"
                android:layout_height="15dp"
                android:layout_weight="0.5"
                android:src="@drawable/sidearrow"/>

        </LinearLayout>

    </com.oktwohundred.corona.preventcorona.ExpenssionLayout.ExpansionHeader>

    <com.oktwohundred.corona.preventcorona.ExpenssionLayout.ExpansionLayout
        android:id="@+id/gender_listP"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:expansion_expanded="false">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_marginTop="5dp"
                android:gravity="center_horizontal"
                android:weightSum="4">

                <TextView
                    android:id="@+id/femaleP"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="3.2"
                    android:gravity="center_vertical"
                    android:fontFamily="@font/arial"
                    android:text="@string/female"
                    android:textColor="@color/descriptext_zinc"
                    android:textSize="17sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_marginTop="5dp"
                android:gravity="center_horizontal"
                android:weightSum="4">

                <TextView
                    android:id="@+id/maleP"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="3.2"
                    android:gravity="center_vertical"
                    android:text="@string/male"
                    android:fontFamily="@font/arial"

                    android:onClick="select_gender_profile"
                    android:textColor="@color/descriptext_zinc"
                    android:textSize="17sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_marginTop="5dp"
                android:gravity="center_horizontal"
                android:weightSum="4">

                <TextView
                    android:id="@+id/noneeP"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="3.2"
                    android:gravity="center_vertical"
                    android:fontFamily="@font/arial"

                    android:onClick="select_gender_profile"
                    android:text="@string/undefined_gen"
                    android:textColor="@color/descriptext_zinc"
                    android:textSize="17sp" />
            </LinearLayout>

        </LinearLayout>


    </com.oktwohundred.corona.preventcorona.ExpenssionLayout.ExpansionLayout>
</LinearLayout>