<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">
        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            app:cardCornerRadius="2dp"
            app:cardElevation="5dp"
            android:elevation="5dp"
            app:cardBackgroundColor="@color/background"
            android:layout_height="wrap_content"
            tools:targetApi="lollipop">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center"
                android:padding="10dp">
                <View
                    android:layout_width="match_parent"
                    android:layout_height="10dp"
                    />
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    >

                    <TextView
                        android:id="@+id/details_per"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/descriptext_grey"
                        android:textSize="17sp"
                        android:justificationMode="inter_word"
                        android:fontFamily="@font/arial"
                        android:text="@string/permission_str"
                        tools:targetApi="o" />

                </LinearLayout>
                <View
                    android:layout_width="match_parent"
                    android:layout_height="25dp"
                    />

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    >

                    <androidx.cardview.widget.CardView
                        android:id="@+id/no_permission"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentStart="true"
                        android:layout_centerInParent="true"
                        app:cardBackgroundColor="@color/btn_zinc"
                        app:cardCornerRadius="2dp"
                        android:elevation="7dp"
                        app:cardElevation="4dp"
                        app:cardUseCompatPadding="true"
                        >

                        <TextView
                            android:id="@+id/btnleft"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:paddingEnd="20dp"
                            android:paddingStart="20dp"
                            android:text="@string/c_a_n_c_e_l"
                            android:textSize="16sp"
                            android:paddingVertical="7dp"
                            android:fontFamily="@font/helvetica_neue_light"
                            android:textColor="@color/titletext_white" />
                    </androidx.cardview.widget.CardView>

                    <androidx.cardview.widget.CardView
                        android:id="@+id/allow_permissions"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:layout_centerInParent="true"
                        app:cardBackgroundColor="@color/btn_purple"
                        app:cardCornerRadius="2dp"
                        android:elevation="7dp"
                        app:cardElevation="4dp"
                        app:cardUseCompatPadding="true"
                        >

                        <TextView
                            android:id="@+id/btnright"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:paddingEnd="20dp"
                            android:paddingStart="20dp"
                            android:paddingVertical="7dp"
                            android:text="@string/a_l_l_o_w"
                            android:textSize="16sp"
                            android:fontFamily="@font/helvetica_neue_light"
                            android:textColor="@color/titletext_white" />
                    </androidx.cardview.widget.CardView>
                </RelativeLayout>
                <View
                    android:layout_width="match_parent"
                    android:layout_height="5dp"
                    />

            </LinearLayout>

        </androidx.cardview.widget.CardView>
</RelativeLayout>